k8s/grafana-renderer.yaml
kind: Service
apiVersion: v1
metadata:
  name: grafana-renderer
spec:
  selector:
    app: grafana-renderer
  ports:
    - port: 80
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-renderer
  labels:
    app: grafana-renderer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana-renderer
  template:
    metadata:
      labels:
        app: grafana-renderer
    spec:
      containers:
        - name: grafana-renderer
          image: grafana/grafana-image-renderer:latest
          ports:
            - containerPort: 8081
