k8s/ingress.yaml
kind: Service
apiVersion: v1
metadata:
  name: grafana-local
  namespace: dmz-ns
spec:
  type: ExternalName
  externalName: grafana.default.svc.cluster.local
  # ports:
  #   - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slo-ingress
  namespace: dmz-ns
  annotations:
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: default/ingress-basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-local
                port:
                  number: 80
  ingressClassName: nginx
